--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body, html{
 .bg-p {
    width: 100%;
    overflow: hidden;
-   margin-left: 400px;
+   margin-left: 300px;
    max-width: 500px
 }
 
@@ -99,10 +99,8 @@ body, html{
 
 .sub-menu1 ul{
     display: none;
-    /* position: absolute; */
     background: chocolate;
     border-radius: 3px;
-    /* width: 150px; */
 }
 
 .menu-bar ul li:hover .sub-menu1 ul{
@@ -134,7 +132,6 @@ body, html{
     width: 100%;
     height: 800px;
     background: gainsboro;
-    /*background-image: url(./bg-aes2.jpg);*/
     background-size: inherit;
 }
 .sub-menu2{
@@ -158,7 +155,6 @@ body, html{
     color: saddlebrown;
 }
 
-
 .latte, .mocha, .cappuccino, .frappuccino, .coldbrew, .espresso{
 width:280px;
 height:200px;
@@ -181,8 +177,6 @@ border-radius:50px;
    
 }
   
-
-/*Contact styling*/
 #footer{
     width: 100%;
     height: 180px;
@@ -252,11 +246,93 @@ h6{
     
 }
 
-/* #drop-dwn:hover .sub-menu1{
-    display: block;
+.pop-up{
+    width: 500px;
+    padding: 15px;
+    height: 500px;
+    background: linear-gradient(to top, rgba(130, 70, 6, 0.142)50%, rgba(130, 70, 6, 0.142)50%);
+    border-radius: 10px;
     position: absolute;
-    background: coral;
-    margin-top: 25px;
-    margin-left: -15px;
-    border-radius: 3px;
-} */
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    visibility: hidden;
+}
+  
+.openPopup{
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+}
+  
+.pop-up h3{
+    text-align: center;
+    color: saddlebrown;
+    margin-top: 10px;
+}
+.pop-up .cancel{
+    cursor: pointer;
+    float: right;
+    font-size:30px;
+    margin-top: 10px;
+    padding: 7px;
+    background-color: chocolate;
+    line-height: 15px;
+    border-radius: 15px;
+    color: saddlebrown;
+}
+.form-control{
+    padding: 10px;
+}
+.form-control p{
+    /* margin-right: 13px; */
+    font-weight: bold;
+    font-size: 18px;
+    color: chocolate;
+    text-align: left;
+    margin-left: 2px;
+}
+.form-control input{
+    padding: 8px;
+    border: 0;
+    border-radius: 6px;
+    outline: none;
+    margin-right: 8px;
+    width: 100%;
+}
+.button button{
+    width: 100%;
+    padding: 8px;
+    border: 0;
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
+    background-color: white;
+}
+.btn{
+    padding: 10px, 60px;
+    background: saddlebrown;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 500;
+    text-decoration: none;
+    color: gainsboro;
+    font-family: cursive;
+  }
+
+  .btn:hover{
+    background-color: chocolate;
+  }
+
+#tx{
+    line-height: 100px;
+    width: 100%;
+
+}
+
+#fn, #ln{
+    margin-bottom: 10px;
+    color: black;
+}
