--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body, html{
 }
 
 
-.bg-p {
+/* .bg-p {
    width: 100%;
    overflow: hidden;
    margin-left: 300px;
@@ -55,8 +55,7 @@ body, html{
     to {
        margin-left: 0%;
     }
- }
-
+ } */
 
 .menu-bar h4{
     text-align: left;
